# flxmlrpc

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  flxmlrpc.pc.in
debian/: changelog  control  copyright  libflxmlrpc1.symbols  not-installed  rules  watch
debian/tests/: control  helloclient
include/: Doxyfile  Makefile.am  Makefile.in  config.h  config.h.in  index.doc
m4/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
test/: HelloClient  HelloClient.cpp  HelloServer  TestBase64Client  TestBase64Server  TestValues  TestValues.cpp  TestXml  Validator  Validator.cpp  makefile
